# GeometryTrash

./: CMakeLists.txt  README.md
src/: Ball.cpp  Ball.hpp  ball.cpp  ball.hpp  fragment.hpp  grid.cpp  grid.hpp  intro.cpp  intro.hpp  main.cpp  obstacle.cpp  obstacle.hpp  player.cpp  player.hpp  trailPoint.hpp
